--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             <li>Data Visualization</li>
             <li>Accounting & Taxation</li>
             <li>Corporate Law</li>
-            <li></li>
+            <!-- <li></li> -->
           </ul>
         </div>
   
@@ -331,8 +331,8 @@
       
       <div class="footer-socials">
         <ul>
-          <li><a href="https://linkedin.com/anujsharma7" target="_blank" class="linkedin">LinkedIn  </a></li>
-          <li><a href="https://github.com/anujsharma10" target="_blank" class="github">GitHub   </a></li>
+          <li><a href="https://linkedin.com/in/anujsharma7" target="_blank" class="linkedin">LinkedIn  </a></li>
+          <!-- <li><a href="https://github.com/anujsharma10" target="_blank" class="github">GitHub   </a></li> -->
           <li><a href="https://instagram.com/_ianuj_" target="_blank" class="instagram">Instagram   </a></li>
         </ul>
       </div>
