--- a/blog2.html
+++ b/blog2.html
@@ -152,9 +152,9 @@
       
       <div class="footer-socials">
         <ul>
-          <li><a href="https://linkedin.com" target="_blank" class="linkedin">LinkedIn  </a></li>
-          <li><a href="https://github.com" target="_blank" class="github">GitHub   </a></li>
-          <li><a href="https://twitter.com" target="_blank" class="twitter">Twitter   </a></li>
+          <li><a href="https://linkedin.com/in/anujsharma7" target="_blank" class="linkedin">LinkedIn  </a></li>
+          <!-- <li><a href="https://github.com/anujsharma10" target="_blank" class="github">GitHub   </a></li> -->
+          <li><a href="https://instagram.com/_ianuj_" target="_blank" class="instagram">Instagram   </a></li>
         </ul>
       </div>
     </div>
