--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
   <footer class="footer">
     <div class="footer-content">
       <div class="footer-logo">
-        <img src="images/404_cat_image.jpg" alt="Logo">
+        <img src="images/signature.jpg" alt="Logo">
       </div>
       
       <div class="footer-socials">
