updated blog text
made some changes t othe blog and project section

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
               <div class="timeline-point"></div>
               <div class="project-content">
                 <h3>Intraday Trading</h3>
-                <p>Developed data-driven models to Select from pool of shares to maximize profit in Intraday. </p>
+                <p>An foundational, data-driven model to Select from pool of shares to maximize Intraday profit. </p>
               </div>
             </div>
           </a>
@@ -268,7 +268,7 @@
               <div class="timeline-point"></div>
               <div class="project-content">
                 <h3>3 Statement Financial Model</h3>
-                <p>A fully functional 3 Statement Financial Model to assess impact of line items on overall financial Statement.</p>
+                <p>An introductory 3 Statement Financial Model to assess impact of line items on overall financial Statement.</p>
               </div>
             </div>
           </a>
