--- a/all_blog.html
+++ b/all_blog.html
@@ -96,8 +96,8 @@
       </div>
       <div class="col-md-6">
         <h2 class="blog-title">About Me</h2>
-        <p class="blog-description">Will write here, with lots of transition and animation, yes with no magic!</p>
-        <a href="404" class="btn btn-primary">Read More</a>
+        <p class="blog-description">Explore a space dedicated to creativity, insight, and a passion for continuous learning and growth.</p>
+        <a href="delay" class="btn btn-primary">Read More</a>
       </div>
     </div>
 
@@ -108,7 +108,7 @@
       </div>
       <div class="col-md-6">
         <h2 class="blog-title">Financial Statement Analysis</h2>
-        <p class="blog-description">Think of it as the financial 'trilogy'—income, balance sheet, and cash flow all working together to tell your company's story.</p>
+        <p class="blog-description">Prepared Common size Statement and conducted Ratio Analysis to get insight in financials of TATA and JSW Steel</p>
         <a href="blog2" class="btn btn-primary">Read More</a>
       </div>
     </div>
@@ -120,7 +120,7 @@
       </div>
       <div class="col-md-6">
         <h2 class="blog-title">3 Statement Financial Model</h2>
-        <p class="blog-description">Will write here!</p>
+        <p class="blog-description">An Elementary 3 Statement Financial Model to assess impact of line items on overall financial Statement.</p>
         <a href="blog3" class="btn btn-primary">Read More</a>
       </div>
     </div>
@@ -132,7 +132,7 @@
       </div>
       <div class="col-md-6">
         <h2 class="blog-title">Portfolio Analysis: Intraday</h2>
-        <p class="blog-description">Will write here!</p>
+        <p class="blog-description">An foundational, data-driven model to Select from pool of shares to maximize Intraday profit.</p>
         <a href="blog4" class="btn btn-primary">Read More</a>
       </div>
     </div>
