--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#projects">Projects</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="all_blog">Blogs</a>
-                </li>
+                </li> -->
 
                 <li class="nav-item">
                     <a class="nav-link" href="contact">Contact</a>
@@ -252,7 +252,7 @@
           </a>
   
           <!-- Project 2 -->
-          <a href="blog/blog4/portfolio_return.xlsx">
+          <!-- <a href="blog/blog4/portfolio_return.xlsx">
             <div class="project-card">
               <div class="timeline-point"></div>
               <div class="project-content">
@@ -260,7 +260,7 @@
                 <p>An foundational, data-driven model to Select from pool of shares to maximize Intraday profit. </p>
               </div>
             </div>
-          </a>
+          </a> -->
   
           <!-- Project 3 -->
           <a href="blog/blog3/finacial_model01.xlsx">
