--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
             <div class="project-card">
               <div class="timeline-point"></div>
               <div class="project-content">
-                <h3>Financial Statement Analysis</h3>
+                <h3>Financial Statement Analysis [Download]</h3>
                 <p>Prepared Common size Statement and conducted Ratio Analysis to get Insight in financial of TATA and JSW Steel</p>
               </div>
             </div>
@@ -267,7 +267,7 @@
             <div class="project-card">
               <div class="timeline-point"></div>
               <div class="project-content">
-                <h3>3 Statement Financial Model</h3>
+                <h3>3 Statement Financial Model [Download]</h3>
                 <p>An introductory 3 Statement Financial Model to assess impact of line items on overall financial Statement.</p>
               </div>
             </div>
