--- a/index.html
+++ b/index.html
@@ -228,6 +228,10 @@
             <p>SKNIE | 2023</p>
             <p>Stream: Commerce | Grade: 89%</p>
           </li>
+          <li class="fade-in">
+            <h3>ACET</h3>
+            <p>IAI | 2024</p>
+            <p>Begining of Actuarial Journey</p>
           
           </li>
         </ul>
