adding the blog again to game

--- a/all_blog.html
+++ b/all_blog.html
@@ -89,17 +89,17 @@
   <div class="container">
     <h1 class=".result-container mb-5" style="font-family: 'Playfair Display', serif; font-size: 3rem;">Blogs</h1>
     <!-- Blog 1 -->
-    <div class="row align-items-center mb-5 result-item">
+    <!-- <div class="row align-items-center mb-5 result-item">
       <div class="col-md-6">
         <img src="images/camera.jpg" alt="camera image" class="img-fluid  shadow"> 
-        <!-- images/test/camera.jpg -->
+       
       </div>
       <div class="col-md-6">
         <h2 class="blog-title">About Me</h2>
         <p class="blog-description">Explore a space dedicated to creativity, insight, and a passion for continuous learning and growth.</p>
         <a href="delay" class="btn btn-primary">Read More</a>
       </div>
-    </div>
+    </div> -->
 
     <!-- Blog 2 -->
     <div class="row align-items-center flex-row-reverse mb-5 result-item">
@@ -126,7 +126,7 @@
     </div>
 
     <!-- Blog 4 -->
-    <div class="row align-items-center flex-row-reverse mb-5 result-item">
+    <!-- <div class="row align-items-center flex-row-reverse mb-5 result-item">
       <div class="col-md-6">
         <img src="images/piano.jpg" alt="piano image" class="img-fluid  shadow">
       </div>
@@ -135,7 +135,7 @@
         <p class="blog-description">An foundational, data-driven model to Select from pool of shares to maximize Intraday profit.</p>
         <a href="blog4" class="btn btn-primary">Read More</a>
       </div>
-    </div>
+    </div> -->
   </div>
 </section>
 
