--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#projects">Projects</a>
                 </li>
-                <!-- <li class="nav-item">
+                <li class="nav-item">
                     <a class="nav-link" href="all_blog">Blogs</a>
-                </li> -->
+                </li>
 
                 <li class="nav-item">
                     <a class="nav-link" href="contact">Contact</a>
