--- a/index.html
+++ b/index.html
@@ -302,7 +302,8 @@
           <ul>
             <li>Microsoft Office</li>
             <li> ChatGpt</li>
-            <li> Python </li>            
+            <li> Python </li>  
+            <li> Financial Reporting </li>             
           </ul>
         </div>
       </div>
