linking blog to the index

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         </div>
         <div class="timeline">
           <!-- Project 1 -->
-          <a href="blog/blog2/financial Statement Analysis.xlsx">
+          <a href="blog2">
             <div class="project-card">
               <div class="timeline-point"></div>
               <div class="project-content">
@@ -268,7 +268,7 @@
           </a> -->
   
           <!-- Project 3 -->
-          <a href="blog/blog3/finacial_model01.xlsx">
+          <a href="blog3">
             <div class="project-card">
               <div class="timeline-point"></div>
               <div class="project-content">
