updating the about section

--- a/index.html
+++ b/index.html
@@ -199,9 +199,12 @@
       <div class="profile">
         <h3>Profile</h3>
         <p>
-          A finance and analytics enthusiast with a CA Intermediate qualification and a certification in Advanced 
-          Business Analytics. Currently pursuing a Mathematics (Hons) degree at Delhi University and preparing 
-          for actuarial exams; am skilled in "data-driven" decision-making and Tally.
+          
+          Aspiring Chartered Accountant with CA Intermediate qualification and a strong analytical
+           mindset. Skilled in Statutory Audit, Financial Analysis, and Risk Assessment,
+            with hands-on experience in Excel, Tally, and Business Analytics.
+           Currently pursuing Mathematics (Hons.) at Delhi University, with a keen interest
+            in Forensic Auditing, Risk Management, and Actuarial Science.
         </p>
       </div>
     </div>
