--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="contact">Contact</a>
                 </li>
+		<li class="nav-item">
+                    <a class="nav-link" href="datasets">Dataset</a>
+                </li>
                 <!-- <li class="nav-item">
                   <a class="nav-link" href="indexold">Old</a>
               </li> -->
