--- a/index.html
+++ b/index.html
@@ -128,8 +128,11 @@
                 <li class="nav-item">
                     <a class="nav-link" href="contact">Contact</a>
                 </li>
-		<li class="nav-item">
+		            <li class="nav-item">
                     <a class="nav-link" href="datasets">Dataset</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="dust">Dust</a>
                 </li>
                 <!-- <li class="nav-item">
                   <a class="nav-link" href="indexold">Old</a>
