just minor changes for https

--- a/dusk/editor/editor.html
+++ b/dusk/editor/editor.html
@@ -174,7 +174,7 @@
 
     <script>
         // Configuration
-        const API_BASE_URL = 'http://168.231.102.44:5000/editor/api';
+        const API_BASE_URL = 'https://168.231.102.44:5000/editor/api';
         
         // Global state
         let editor = document.getElementById('editor');
