--- a/dusk/editor/editor.html
+++ b/dusk/editor/editor.html
@@ -174,7 +174,7 @@
 
     <script>
         // Configuration
-        const API_BASE_URL = 'https://168.231.102.44/editor/api';
+        const API_BASE_URL = 'https://srv975554.hstgr.cloud/editor/api';
         
         // Global state
         let editor = document.getElementById('editor');
