--- a/dust.html
+++ b/dust.html
@@ -351,7 +351,7 @@ This works like a Word document for organizing your chat content."
         
          // Start new chat
             function startNewChat() {
-                if (currentMessages.length > 0 && !confirm('Start a new chat? Your current chat will be saved.')
+                if (currentMessages.length > 0 //&& !confirm('Start a new chat? Your current chat will be saved.')
             ) {
                     return;
                 }
